# pdfTranslator

./: .pre-commit-config.yaml  app.py  pyproject.toml
