[tool.poetry]
name = "pdftranslator"
version = "0.1.0"
description = ""
authors = ["Brandon Williams <bwilliams9@pm.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
PyPDF2 = "^3.0.1"
transformers = "^4.41.2"
fpdf = "^1.7.2"
torch = "^2.3.1"
click = "^8.1.7"
sentencepiece = "^0.2.0"
sacremoses = "^0.1.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.9"
pre-commit = "^3.7.1"
ipdb = "^0.13.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
